--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,3 +1,20 @@
+.container {
+    max-width: 430px;
+    background: #fff;
+    border-radius: 7px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    color: #525252;
+    padding: 2rem;
+    position: relative;
+}
+
+.container header {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
 .form {
     display: flex;
     gap: 25px;
@@ -38,6 +55,24 @@
     font-size: 24px;
 
 
+}
+
+.closeBtn {
+    display: block;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: inherit;
+    background-image: url(https://img.icons8.com/?size=512&id=VntZK7oiCJSH&format=png);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    width: 30px;
+    height: 30px;
 }
 
 .addContact:active {
